--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vuelidate/core": "^2.0.0-alpha.44",
     "@vuelidate/validators": "^2.0.0-alpha.31",
     "is-color": "^1.0.2",
+    "miragejs": "^0.1.45",
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
